--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -37,6 +37,8 @@
             </div>
         </main>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="../js/supabase-config.js"></script>
     <script src="../js/admin-dashboard.js"></script>
 </body>
 </html>
