--- a/admin/login.html
+++ b/admin/login.html
@@ -25,6 +25,8 @@
             <p class="demo-info">Demo: username: admin, password: admin123</p>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="../js/supabase-config.js"></script>
     <script src="../js/login.js"></script>
 </body>
 </html>
