--- a/admin/ppdb.html
+++ b/admin/ppdb.html
@@ -41,6 +41,8 @@
             </div>
         </main>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="../js/supabase-config.js"></script>
     <script src="../js/admin-ppdb.js"></script>
 </body>
 </html>
