--- a/berita.html
+++ b/berita.html
@@ -37,6 +37,8 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="js/supabase-config.js"></script>
     <script src="js/berita.js"></script>
 </body>
 </html>
