--- a/admin/login.html
+++ b/admin/login.html
@@ -26,7 +26,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="../js/supabase-config.js"></script>
+    <script src="../js/db-config.js"></script>
     <script src="../js/login.js"></script>
 </body>
 </html>
