--- a/admin/berita.html
+++ b/admin/berita.html
@@ -67,7 +67,7 @@
         </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="../js/supabase-config.js"></script>
+    <script src="../js/db-config.js"></script>
     <script src="../js/admin-berita.js"></script>
 </body>
 </html>
