--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -38,7 +38,7 @@
         </main>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="../js/supabase-config.js"></script>
+    <script src="../js/db-config.js"></script>
     <script src="../js/admin-dashboard.js"></script>
 </body>
 </html>
