--- a/berita.html
+++ b/berita.html
@@ -38,7 +38,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="js/supabase-config.js"></script>
+    <script src="js/db-config.js"></script>
     <script src="js/berita.js"></script>
 </body>
 </html>
