--- a/ppdb.html
+++ b/ppdb.html
@@ -92,7 +92,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="js/supabase-config.js"></script>
+    <script src="js/db-config.js"></script>
     <script src="js/ppdb.js"></script>
 </body>
 </html>
